# whats-for-dinner

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  pyrightconfig.json
.claude/: settings.json
backend/: .env.example  Makefile  docker-compose.yml  pyproject.toml
backend/app/: config.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: __init__.py  feedback.py  grocery_list.py  meal_plan.py  recipe.py  user_profile.py
backend/app/domain/interfaces/: __init__.py  embedding_service.py  feedback_repository.py  grocery_list_repository.py  llm_service.py  meal_plan_repository.py  recipe_repository.py  user_repository.py  vector_store.py
backend/app/infrastructure/api/: dependencies.py
backend/app/infrastructure/persistence/dynamodb/: __init__.py  client.py  errors.py  feedback_repository.py  grocery_list_repository.py  mappers.py  meal_plan_repository.py  recipe_repository.py  user_repository.py
backend/data/: recipe_schema.json
backend/scripts/: init_dynamodb.py  seed_recipes.py  wait-for-localstack.sh
backend/tests/: test_config.py  test_domain_entities.py
docs/: DESIGN.md
